<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textEditFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_post_title"
            android:fontFamily="@font/raleway_semibold"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/grey_dark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:layout_width="40dp"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:background="@color/grey_dark"/>

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_post_date"
            android:fontFamily="@font/raleway_semibold"
            android:paddingBottom="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:textColor="@color/grey_dark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_semibold"
            android:background="@drawable/txt_edit_background"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_post_time"
            android:paddingBottom="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/grey_dark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_semibold"
            android:background="@drawable/txt_edit_background"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textPersonCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_post_person_count"
            android:paddingBottom="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/grey_dark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_semibold"
            android:background="@drawable/txt_edit_background"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_post_description"
            android:paddingBottom="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:fontFamily="@font/raleway_semibold"
            android:textColor="@color/grey_dark"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway_semibold"
            android:background="@drawable/txt_edit_background"
            android:padding="10dp"
            android:inputType="textMultiLine"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="30dp"
            android:gravity="right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/btn_transparent_angled"
                android:text="@string/edit_post_delete"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@color/grey_light"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_filled_angled"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/edit_post_save"
                android:fontFamily="@font/raleway_semibold"
                android:textColor="@color/white"
                android:textSize="20sp" />



        </LinearLayout>





    </LinearLayout>



</RelativeLayout>